Added postcss import and apply

--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,10 @@
         srcset="./images/Fray@2x.jpg 2x"
         alt="Fray shouting from Futurama TV-show">
     </picture>
+    <p>Oh, buy this</p>
+    <ul class="shopping-list">
+      <li>Milk</li>
+      <li>Tomato</li>
+    </ul>
   </body>
 </html>
